# CS2-Demoviewer

./: .gitignore  README.md
.github/workflows/: build-windows.yml
artifacts/cs2-demo-manager/: index.html  package-lock.json  package.json
artifacts/cs2-demo-manager/analyzer/: README.md  analyze-demo.js  package-lock.json  package.json
artifacts/cs2-demo-manager/scripts/: copy-node-runtime.mjs
artifacts/cs2-demo-manager/src/: App.tsx  styles.css
artifacts/cs2-demo-manager/src-tauri/: Cargo.toml  tauri.conf.json
artifacts/cs2-demo-manager/src-tauri/examples/: decompress_demo.rs
artifacts/cs2-demo-manager/src-tauri/src/: lib.rs  main.rs
artifacts/cs2-demo-manager/src/components/: StatisticsModal.tsx
artifacts/cs2-demo-manager/src/services/: analysisCache.ts  demoService.ts  statsService.ts  voiceService.ts
artifacts/cs2-demo-manager/src/types/: demo.ts  stats.ts
