[package]
name = "cs2-demo-manager"
version = "0.1.0"
description = "Local CS2 demo manager"
authors = ["CS2 Demo Manager"]
edition = "2021"

[lib]
name = "cs2_demo_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time"] }
arboard = "3"
flate2 = "1"
zstd = "0.13"
time = "=0.3.36"
